@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=dzco
-VERSION=1.4.6
+VERSION=1.4.7
 
 DEPENDENCY="zeda=1.6.4;zm=1.3.13"
